force-app/main/default/objects/Company_News__c/Company_News__c.object-meta.xml
<CustomObject>
    <label>Company News</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>News Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company News</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>