force-app/main/default/objects/Company_News__c/fields/Date_Posted__c.field-meta.xml
<CustomField>
    <fullName>Date_Posted__c</fullName>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>