force-app/main/default/objects/Company_News__c/fields/DynamicBadgeSet2__c.field-meta.xml
<CustomField>
    <fullName>DynamicBadgeSet2__c</fullName>
    <formula>CASE(TEXT(News_Type__c),
&quot;Covid-19&quot;, &quot;#F7B755&quot;,
&quot;Office&quot;, &quot;#55B2F7&quot;,
&quot;Other&quot;, &quot;#DEF755&quot;,
&quot;#DADADA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DynamicBadgeSet2</label>
    <type>Text</type>
</CustomField>