force-app/main/default/objects/Company_News__c/fields/DynamicBadgeSet__c.field-meta.xml
<CustomField>
    <fullName>DynamicBadgeSet__c</fullName>
    <formula>CASE(TEXT(Status__c),
&quot;New&quot;, &quot;#a7f0f6&quot;,
&quot;Urgent&quot;, &quot;#EE0000&quot;,
&quot;Normal&quot;, &quot;#09dc37&quot;,
&quot;Old&quot;, &quot;#080707&quot;,
&quot;#DADADA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DynamicBadgeSet</label>
    <type>Text</type>
</CustomField>