force-app/main/default/objects/Company_News__c/fields/News_Type__c.field-meta.xml
<CustomField>
    <fullName>News_Type__c</fullName>
    <label>News Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covid-19</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>