force-app/main/default/objects/Company_News__c/recordTypes/Company_New_RT.recordType-meta.xml
<RecordType>
    <fullName>Company_New_RT</fullName>
    <active>true</active>
    <label>Company New RT</label>
</RecordType>